--- a/static/about.html
+++ b/static/about.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
-<!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Oct 16 2020 09:01:14 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
+<!--  Last Published: Tue Nov 10 2020 18:30:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f8432592616248537dab3da" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
@@ -21,44 +20,78 @@
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
+  <style>
+  .asciicast iframe {
+    width: 600px !important;
+    max-width: 100% !important;
+  }
+  .asciinema-theme-asciinema .asciinema-terminal {
+  	background: red !important;
+  }
+</style>
 </head>
 <body class="fs-body">
-  <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
-    <div class="widewrapper w-container"><a href="index.html" class="w-nav-brand"><img src="images/fs-logo.svg" loading="lazy" width="143.5" alt="Frontside "></a>
-      <nav role="navigation" class="nav-menu w-nav-menu"><a href="about.html" aria-current="page" class="navlink w-nav-link w--current">People</a><a href="consulting.html" class="navlink w-nav-link">Consulting</a><a href="#" class="navlink w-nav-link">Subscription</a><a href="tools.html" class="navlink w-nav-link">Tools</a><a href="#" class="navlink w-nav-link">Contact</a></nav>
-      <div class="w-nav-button">
-        <div class="w-icon-nav-menu"></div>
-      </div>
+  <div data-collapse="medium" data-animation="over-right" data-duration="200" data-doc-height="1" data-easing="ease-in-out-circ" data-no-scroll="1" role="banner" class="navbar w-nav">
+    <div class="widewrapper w-container">
+      <a href="index.html" class="w-nav-brand"><img src="images/fs-logo.svg" loading="lazy" width="143.5" alt="Frontside "></a>
+      <nav role="navigation" class="fullnav w-nav-menu">
+        <ul role="list" class="navwrap w-list-unstyled">
+          <li class="clase-nav">
+            <div class="menu-button-2 w-nav-button"><img src="images/hamburger-menu2x.png" loading="lazy" width="33" alt="" class="image-5"></div>
+          </li>
+          <li class="navitem homelink">
+            <a href="index.html" class="main-nav-link w-nav-link">Homepage</a>
+          </li>
+          <li class="navitem">
+            <a href="about.html" aria-current="page" class="main-nav-link w-nav-link w--current">People</a>
+          </li>
+          <li class="navitem">
+            <a href="consulting.html" class="main-nav-link w-nav-link">Consulting</a>
+          </li>
+          <li class="navitem">
+            <a href="tools.html" class="main-nav-link w-nav-link">Tools</a>
+          </li>
+          <li class="navitem">
+            <a href="/blog" class="main-nav-link w-nav-link">Insights</a>
+          </li>
+          <li class="navitem contactin">
+            <a href="#" class="button cta nav in w-button">Contact</a>
+          </li>
+        </ul>
+      </nav>
+      <a href="#" class="button cta nav w-button">Contact</a>
+      <div class="menu-button-2 w-nav-button"><img src="images/hamburger-menu2x.png" loading="lazy" width="33" alt="" class="image-4"></div>
     </div>
   </div>
-  <section class="widewrapper w-container">
-    <div class="herotext cenetered">
-      <h1 class="heading centered">We&#x27;ve been <span class="text-span-12">improving</span> engineering organizations <span class="text-span-11">since 2005</span></h1>
-      <p class="subheader centered">We are a purposefully small group of engineers who want to create scale-ready tools</p>
+  <section class="widewrapper herowrapper w-container">
+    <div class="herotext">
+      <h1 class="heading">We’ve been <span class="text-span-12">improving</span> engineering organizations <span class="text-span-11">since 2005</span></h1>
+      <p class="subheader">We are a purposefully small group of engineers who want to create scale-ready tools</p>
     </div>
+    <div class="aboutheroimage"><img src="images/about-hero2x.png" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 93vw, (max-width: 991px) 91vw, 43vw" width="713.5" srcset="images/about-hero2x-p-500.png 500w, images/about-hero2x-p-800.png 800w, images/about-hero2x.png 1427w" alt=""></div>
   </section>
   <div class="bigquote-section dark">
     <div class="bigquote-wrapper w-container">
-      <blockquote class="bigquote dark">“Everyone has a great attitude of <span class="text-span-14">can do</span> and <span class="text-span-13">we will solve this</span>, and the work ethic is strong. There&#x27;s a strong desire to make a great thing and be a great partner.”</blockquote>
+      <blockquote class="bigquote dark">“Everyone at Frontside has a great attitude of <span class="text-span-43">can do</span> and <span class="text-span-44">we will solve this</span>. Their work ethic is strong, coupled with the desire to be a great partner.”</blockquote>
       <p class="bigquote-author dark">— Brian Beale, Director of Software Engineering at Resideo</p>
     </div>
   </div>
   <div class="widewrapper values w-container">
-    <div class="valuebox">
+    <div class="valuebox decor1">
       <h3 class="valuetitle"><span class="text-span-16">We plan</span> <br>for evolution</h3>
       <p>The best version of your software always exists in the future. We provide robust architectures and tools that enable your team to experiment and pivot quickly.</p>
     </div>
-    <div class="valuebox">
+    <div class="valuebox decor2">
       <h3 class="valuetitle"><span class="text-span-17">We build</span> <br>long-lasting software</h3>
       <p>High-quality applications should not require re-writing every few months or years. We design future-forward software system with predictable long-term maintenance.</p>
     </div>
-    <div class="valuebox">
+    <div class="valuebox decor3">
       <h3 class="valuetitle"><span class="text-span-16">We favor</span> <br><strong>delivering consistently</strong></h3>
       <p>Not delivering features fast enough can have costly consequences. We equip your teams with the tools and know-how to minimize regressions and shorten feedback loops.</p>
     </div>
-    <div class="valuebox">
+    <div class="valuebox decor4">
       <h3 class="valuetitle"><span class="text-span-18">We care<br></span>about developers&#x27; experience</h3>
       <p>The right tools get more done swiftly and effortlessly. We reduce bottlenecks and untangle technical complexities by automating deployments and other repetitive tasks.</p>
     </div>
@@ -66,7 +99,7 @@
       <h3 class="valuetitle"><span class="text-span-19"><strong>We lead<br></strong></span><strong>with insight</strong></h3>
       <p>The most substantial challenges in software design are not at the codebase level. We develop deep relationships with our clients to help them improve their velocity across the organization. </p>
     </div>
-    <div class="valuebox">
+    <div class="valuebox decor6">
       <h3 class="valuetitle"><span class="text-span-20">We work with<br></span>OSS contributors</h3>
       <p>Our long-standing relationships with top performing experts from the Open Source community allows us to bring you elite level talent who can address short term needs and identify issues on the horizon.</p>
     </div>
@@ -74,14 +107,88 @@
   <div class="meettheteam-wrapper w-container">
     <h2 class="meet-the-team">Meet the team</h2>
     <div class="person-intro">
-      <h3 class="person-intro-title">Charles Lowell</h3>
-      <div class="text-block">CTO / Head of Research &amp; Development</div>
-      <div class="person-intro-meta">Austin, Texas</div>
-      <p>More than 25 years ago, Charles torched a promising career in biochemistry and joined the dot-com revolution. Ever since he&#x27;s laid down the architecture of dozens of corporate web and mobile applications. He continues the revolution through active research and development on automated testing and real-life use of algebraic effects and concurrency.</p>
+      <div class="person-info">
+        <h3 class="person-intro-title">Charles Lowell</h3>
+        <div class="person-title">CTO / Head of Research &amp; Development</div>
+        <div class="person-intro-meta">Austin, Texas</div>
+        <p>More than 25 years ago, Charles torched a promising career in biochemistry and joined the dot-com revolution. Ever since he&#x27;s laid down the architecture of dozens of corporate web and mobile applications. He continues the revolution through active research and development on automated testing and real-life use of algebraic effects and concurrency.</p>
+      </div>
+      <div class="person-picture"><img src="images/Charles.jpg" loading="lazy" width="500" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, (max-width: 991px) 300px, 350px" srcset="images/Charles.jpg 500w, images/Charles.jpg 800w, images/Charles.jpg 1000w" alt="Portrait of Charles Lowell. He has a salt and pepper beard beard and a hat. " class="person-image"></div>
+    </div>
+    <div class="person-intro">
+      <div class="person-info">
+        <h3 class="person-intro-title">Taras Mankovski</h3>
+        <div class="person-title">CEO</div>
+        <div class="person-intro-meta">Toronto, Canada</div>
+        <p>Taras began his journey into the realm of digital technology when in early 2000s his first clients started asking him to build websites. He quickly realized that rather than go it alone how much more satisfying it was to bring together cross disciplinary teams to work collaboratively towards common goals. At Frontside, Taras creates and nourishes relationships among his team, clients and partners to achieve ambitious long-term objectives</p>
+      </div>
+      <div class="person-picture"><img src="images/Taras.jpg" loading="lazy" width="500" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, (max-width: 991px) 300px, 350px" srcset="images/Taras.jpg 500w, images/Taras.jpg 800w, images/Taras.jpg 1000w" alt="Portrait of Taras. He has long straight hair. He has no beard in this picture but usually fashions a short stubble. " class="person-image"></div>
+    </div>
+    <div class="person-intro">
+      <div class="person-info">
+        <h3 class="person-intro-title">Jeffrey Cherewaty</h3>
+        <div class="person-title"><strong>Engineering Consultant</strong></div>
+        <div class="person-intro-meta">Austin, Texas</div>
+        <p>After succeeding in the trenches of the startup world—leading frontend teams through hyper-growth and a decade consulting for global corporations—Jeffrey now calls himself a &quot;software diplomat.&quot; With a masters in Software Engineering from The University of Texas at Austin, he facilitates technical conversations and rolls up his sleeves to make change happen. </p>
+      </div>
+      <div class="person-picture"><img src="images/Jeffrrey.jpg" loading="lazy" width="500" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, (max-width: 991px) 300px, 350px" srcset="images/Jeffrrey.jpg 500w, images/Jeffrrey.jpg 800w, images/Jeffrrey.jpg 1000w" alt="Portrait of Jeffrey. He has a short haircut and no beard." class="person-image"></div>
+    </div>
+    <div class="person-intro">
+      <div class="person-info">
+        <h3 class="person-intro-title">Elrick Ryan</h3>
+        <div class="person-title"><strong>Engineering Consultant</strong></div>
+        <div class="person-intro-meta">Boston, Massachusetts</div>
+        <p>For over a decade, Elrick has been leading product teams as a creative engineer. Drawing from his background in print design and marketing, he brings together impeccable user experiences that deliver business value. </p>
+      </div>
+      <div class="person-picture"><img src="images/Elrick.jpg" loading="lazy" width="500" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, (max-width: 991px) 300px, 350px" srcset="images/Elrick.jpg 500w, images/Elrick.jpg 800w, images/Elrick.jpg 1000w" alt="Portrait of Elrick. He has short hair and a short beard. " class="person-image"></div>
+    </div>
+    <div class="person-intro">
+      <div class="person-info">
+        <h3 class="person-intro-title">Robbie Pitts</h3>
+        <div class="person-title"><strong>Engineering Consultant</strong></div>
+        <div class="person-intro-meta">Richmond, Virginia</div>
+        <p>Driven by a strong passion for technical excellence, Robbie has helped teams with their development tools and testing practices since 2012. With a scrum certification under his belt, Robbie knows how to coordinate developers to deliver quality software on time. </p>
+      </div>
+      <div class="person-picture"><img src="images/Robbie.jpg" loading="lazy" width="500" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, (max-width: 991px) 300px, 350px" srcset="images/Robbie.jpg 500w, images/Robbie.jpg 800w, images/Robbie.jpg 1000w" alt="" class="person-image"></div>
+    </div>
+    <div class="person-intro">
+      <div class="person-info">
+        <h3 class="person-intro-title">Jordan Nieuwhof</h3>
+        <div class="person-title"><strong>Engineering Consultant</strong></div>
+        <div class="person-intro-meta">Halifax, Canada</div>
+        <p>After the startup he worked at got acquired, Jordan spent five years as a consultant, developing smart process that automate key business and research activities for his clients. At Frontside, he puts his Computer Engineering degree from the University of Toronto to work to the same ends, creating tools to automate development processes.</p>
+      </div>
+      <div class="person-picture"><img src="images/Robbie.jpg" loading="lazy" width="500" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, (max-width: 991px) 300px, 350px" srcset="images/Robbie.jpg 500w, images/Robbie.jpg 800w, images/Robbie.jpg 1000w" alt="" class="person-image"></div>
+    </div>
+    <div class="person-intro">
+      <div class="person-info">
+        <h3 class="person-intro-title">Min Kim</h3>
+        <div class="person-title"><strong>Associate Engineering Consultant</strong></div>
+        <div class="person-intro-meta">Toronto, Canada</div>
+        <p>After the startup he worked at got acquired, Jordan spent five years as a consultant, developing smart process that automate key business and research activities for his clients. At Frontside, he puts his Computer Engineering degree from the University of Toronto to work to the same ends, creating tools to automate development processes.</p>
+      </div>
+      <div class="person-picture"><img src="images/min.jpg" loading="lazy" width="500" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, (max-width: 991px) 300px, 350px" srcset="images/min.jpg 500w, images/min.jpg 800w, images/min.jpg 1000w" alt="Portrait of Min. He&#x27;s wearing round glasses and has medium-long hair. He&#x27;s holding a cello." class="person-image"></div>
+    </div>
+    <div class="person-intro">
+      <div class="person-info">
+        <h3 class="person-intro-title">Jorge Lainfiesta</h3>
+        <div class="person-title"><strong>Communications / Marketing</strong></div>
+        <div class="person-intro-meta">Barcelona, Spain</div>
+        <p>After working in software engineering for five years, Jorge pursued his interests with a masters in digital communication at UCLA and AAU. Now Jorge channels the tech enthusiasm at Frontside into messages for everyone. </p>
+      </div>
+      <div class="person-picture"><img src="images/Jorge.jpg" loading="lazy" width="500" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, (max-width: 991px) 300px, 350px" srcset="images/Jorge.jpg 500w, images/Jorge.jpg 800w, images/Jorge.jpg 1000w" alt="Portrait of Jorge. He has short hair a short stubble. " class="person-image"></div>
     </div>
   </div>
   <footer class="footerwrapper w-container">
-    <nav class="navigation"><a href="index.html" class="footerlink">Home</a><a href="#" class="footerlink">About</a><a href="consulting.html" class="footerlink">Consulting</a><a href="#" class="footerlink">Subscription</a><a href="#" class="footerlink">Blog</a><a href="#" class="footerlink">Contact</a></nav><a href="https://frontside.com/" target="_blank" class="footer-symbol w-inline-block"><img src="images/frontside-symbol2x_1frontside-symbol2x.png" loading="lazy" width="32.5" alt="Frontside Software" class="image-6"></a>
+    <nav class="navigation">
+      <a href="index.html" class="footerlink">Home</a>
+      <a href="about.html" aria-current="page" class="footerlink w--current">About</a>
+      <a href="consulting.html" class="footerlink">Consulting</a>
+      <a href="tools.html" class="footerlink">Tools</a>
+      <a href="#" class="footerlink">Blog</a>
+      <a href="#" class="footerlink">Contact</a>
+    </nav>
+    <a href="https://frontside.com/" target="_blank" class="footer-symbol w-inline-block"><img src="images/fs-webclip.png" loading="lazy" width="32.5" alt="" class="image-6"></a>
     <p class="footer-notes"><br>2301 W Anderson Ln #107<br>Austin, Texas 78757<br>+1 (800) 493-4589</p>
     <p class="copyright">© 2005-2020 THE FRONTSIDE SOFTWARE, INC. ALL RIGHTS RESERVED.</p>
   </footer>
