--- a/static/consulting.html
+++ b/static/consulting.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
-<!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Oct 16 2020 09:01:14 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
+<!--  Last Published: Tue Nov 10 2020 18:30:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f85a0bba25bf148ce79acb4" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
@@ -21,49 +20,87 @@
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
+  <style>
+  .asciicast iframe {
+    width: 600px !important;
+    max-width: 100% !important;
+  }
+  .asciinema-theme-asciinema .asciinema-terminal {
+  	background: red !important;
+  }
+</style>
 </head>
 <body class="fs-body">
-  <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
-    <div class="widewrapper w-container"><a href="index.html" class="w-nav-brand"><img src="images/fs-logo.svg" loading="lazy" width="143.5" alt="Frontside "></a>
-      <nav role="navigation" class="nav-menu w-nav-menu"><a href="about.html" class="navlink w-nav-link">People</a><a href="consulting.html" aria-current="page" class="navlink w-nav-link w--current">Consulting</a><a href="#" class="navlink w-nav-link">Subscription</a><a href="tools.html" class="navlink w-nav-link">Tools</a><a href="#" class="navlink w-nav-link">Contact</a></nav>
-      <div class="w-nav-button">
-        <div class="w-icon-nav-menu"></div>
-      </div>
+  <div data-collapse="medium" data-animation="over-right" data-duration="200" data-doc-height="1" data-easing="ease-in-out-circ" data-no-scroll="1" role="banner" class="navbar w-nav">
+    <div class="widewrapper w-container">
+      <a href="index.html" class="w-nav-brand"><img src="images/fs-logo.svg" loading="lazy" width="143.5" alt="Frontside "></a>
+      <nav role="navigation" class="fullnav w-nav-menu">
+        <ul role="list" class="navwrap w-list-unstyled">
+          <li class="clase-nav">
+            <div class="menu-button-2 w-nav-button"><img src="images/hamburger-menu2x.png" loading="lazy" width="33" alt="" class="image-5"></div>
+          </li>
+          <li class="navitem homelink">
+            <a href="index.html" class="main-nav-link w-nav-link">Homepage</a>
+          </li>
+          <li class="navitem">
+            <a href="about.html" class="main-nav-link w-nav-link">People</a>
+          </li>
+          <li class="navitem">
+            <a href="consulting.html" aria-current="page" class="main-nav-link w-nav-link w--current">Consulting</a>
+          </li>
+          <li class="navitem">
+            <a href="tools.html" class="main-nav-link w-nav-link">Tools</a>
+          </li>
+          <li class="navitem">
+            <a href="/blog" class="main-nav-link w-nav-link">Insights</a>
+          </li>
+          <li class="navitem contactin">
+            <a href="#" class="button cta nav in w-button">Contact</a>
+          </li>
+        </ul>
+      </nav>
+      <a href="#" class="button cta nav w-button">Contact</a>
+      <div class="menu-button-2 w-nav-button"><img src="images/hamburger-menu2x.png" loading="lazy" width="33" alt="" class="image-4"></div>
     </div>
   </div>
-  <section class="widewrapper w-container">
+  <section class="widewrapper herowrapper w-container">
     <div class="herotext">
       <h1 class="heading">Build the <span class="text-span-4">engineering</span> backbone of an <span class="text-span-2">industry leader</span></h1>
       <p class="subheader">We provide web/mobile architecture and workflows that accelerate your business growth.</p>
     </div>
+    <div class="consultingheroimage"><img src="images/consulting-hero2x.png" loading="lazy" sizes="(max-width: 479px) 86vw, (max-width: 767px) 350px, 420px" srcset="images/consulting-hero2x-p-500.png 500w, images/consulting-hero2x.png 837w" alt=""></div>
   </section>
   <section class="horizontal-logos w-container"><img src="images/client-dell2x.png" loading="lazy" width="74.5" alt="" class="client-logo"><img src="images/client-honeywell2x.png" loading="lazy" width="138" alt="" class="client-logo"><img src="images/client-resideo2x.png" loading="lazy" width="91.5" alt="" class="client-logo"><img src="images/client-standard-chartered2x.png" loading="lazy" width="74" alt="" class="client-logo"><img src="images/client-ebsco2x.png" loading="lazy" width="87" alt="" class="client-logo"><img src="images/client-sxsw2x.png" loading="lazy" width="89" alt="" class="client-logo"><img src="images/client-conde-nast2x.png" loading="lazy" width="209" alt="" class="client-logo"></section>
   <div class="lone-ctw-wrapper w-container">
     <div class="cta-block">
-      <h3 class="cta-intro">Talk with one<br>of our engineers</h3><a href="#" class="button cta w-button">Schedule a call</a></div>
+      <h3 class="cta-intro">Talk with one<br>of our engineers</h3>
+      <a href="#" class="button cta w-button">Schedule a call</a>
+    </div>
   </div>
   <section class="feature-wrapper w-container">
-    <div class="feature-text">
-      <h2 class="heading-3"><strong>Invest in </strong><span class="text-span-5"><strong>long-term success</strong></span><strong> from the beginning</strong></h2>
+    <div class="feature-image"><img src="images/consulting-long-term2x.png" loading="eager" width="505.5" sizes="(max-width: 767px) 92vw, (max-width: 991px) 505.5px, 47vw" srcset="images/consulting-long-term2x-p-500.png 500w, images/consulting-long-term2x.png 1011w" alt=""></div>
+    <div class="feature-text right">
+      <h2 class="heading-3"><strong>Invest in </strong><span class="text-span-5"><strong>long-term success</strong></span><strong><br>from the beginning</strong></h2>
       <p>Once you’re growing, what was once a “quick” prototype will be hard to re-write and replace.<strong> </strong>From the beginning we position your team for systematic and predictable development and scalable products.</p>
     </div>
-    <div class="feature-image"><img src="images/consulting-long-term2x.png" loading="eager" width="505.5" sizes="(max-width: 767px) 92vw, (max-width: 991px) 505.5px, 49vw" srcset="images/consulting-long-term2x-p-500.png 500w, images/consulting-long-term2x.png 1011w" alt=""></div>
   </section>
   <section class="feature-wrapper w-container">
-    <div class="feature-image"><img src="images/consulting-teams2x.png" srcset="images/consulting-teams2x-p-500.png 500w, images/consulting-teams2x-p-800.png 800w, images/consulting-teams2x.png 1105w" width="552.5" sizes="(max-width: 767px) 92vw, (max-width: 991px) 67vw, 51vw" alt=""></div>
-    <div class="feature-text right">
+    <div class="feature-text">
       <h2 class="heading-3"><strong>Set your </strong><span class="text-span-6"><strong>teams</strong></span><strong> up for </strong><span class="text-span-7"><strong>collaboration</strong></span></h2>
       <p>Too often stakeholders are asked to fly blind between demos while needing to make key business decisions or planning marketing campaigns. We introduce automatic visibility tools for your teams so all software is built collaboratively and transparently.</p>
     </div>
+    <div class="feature-image"><img src="images/consulting-teams2x.png" srcset="images/consulting-teams2x-p-500.png 500w, images/consulting-teams2x-p-800.png 800w, images/consulting-teams2x.png 1105w" width="552.5" sizes="(max-width: 767px) 92vw, (max-width: 991px) 68vw, 51vw" alt=""></div>
   </section>
-  <div class="bigquote-section">
+  <div class="bigquote-section darker">
     <div class="bigquote-wrapper w-container">
-      <blockquote class="bigquote">“They introduced us to a new way of thinking and working that we adopted across the board. The quality of their work was far higher than what we’ve seen before.”</blockquote>
+      <blockquote class="bigquote">“They introduced us to a new way of thinking and working that we adopted across the board. <span class="text-span-40">The quality of their work was far higher than what we’ve seen before.</span>”</blockquote>
       <p class="bigquote-author">— Benjamin Shine,<br>Staff Engineer, AltSchool</p>
-      <div class="cta-block variation1">
-        <h3 class="cta-intro">Get ready for scale </h3><a href="#" class="button cta w-button">Talk with us</a></div>
+      <div>
+        <h3 class="cta-intro overcolor">Get ready for scale </h3>
+        <a href="#" class="button white w-button"><span class="gradienttext">Talk with us</span></a>
+      </div>
     </div>
   </div>
   <section class="feature-wrapper w-container">
@@ -74,22 +111,31 @@
     <div class="feature-image"><img src="images/consulting-collaborate2x.png" loading="lazy" width="423" sizes="(max-width: 479px) 90vw, 423px" srcset="images/consulting-collaborate2x-p-500.png 500w, images/consulting-collaborate2x.png 846w" alt=""></div>
   </section>
   <section class="feature-wrapper w-container">
-    <div class="feature-image"><img src="images/consulting-network2x.png" loading="lazy" width="311.5" alt=""></div>
+    <div class="feature-image"><img src="images/consulting-network_12x.png" loading="lazy" width="311.5" alt=""></div>
     <div class="feature-text right">
       <h2 class="heading-3"><strong>Always work with</strong> the<span class="text-span-10"> </span><span class="text-span-9"><strong>best for the task</strong></span></h2>
       <p>Many consultants present themselves as jack-of-all-trades but underdeliver on the expertise that you need. Instead, long-standing relationships with top performing experts from the Open Source community allows us to bring you elite level talent, who are often the creators of the tools you use. </p>
     </div>
   </section>
-  <section class="bottomwrapper drama w-container">
-    <div class="sidequotewrapper">
-      <blockquote class="sidequote">“Frontside constantly provides insight and ideas to eliminate blockers so we deliver quality and innovation to production rapidly and iteratively.”</blockquote>
-      <p class="sidequoteauthor">— Warren Young,<br>Senior Product Manager at Resideo.</p>
+  <section class="bottomwrapper dialogue w-container">
+    <div class="dialoguequote">
+      <blockquote class="bigquote medium">“Frontside constantly provides insight and ideas to <span class="text-span-41">eliminate blockers so we deliver quality and innovation</span> to production rapidly and iteratively.”</blockquote>
+      <p class="bigquote-author nomargin">— Warren Young, Senior Product Manager at Resideo.</p>
     </div>
-    <div class="cta-block variation2 bottomside">
-      <h3 class="cta-intro white">Talk with one<br>of our engineers</h3><a href="#" class="button white w-button">Schedule a call</a></div>
+    <div class="dialogcta">
+      <a href="#" class="button purple w-button">Get in touch</a>
+    </div>
   </section>
   <footer class="footerwrapper w-container">
-    <nav class="navigation"><a href="index.html" class="footerlink">Home</a><a href="#" class="footerlink">About</a><a href="consulting.html" aria-current="page" class="footerlink w--current">Consulting</a><a href="#" class="footerlink">Subscription</a><a href="#" class="footerlink">Blog</a><a href="#" class="footerlink">Contact</a></nav><a href="https://frontside.com/" target="_blank" class="footer-symbol w-inline-block"><img src="images/frontside-symbol2x_1frontside-symbol2x.png" loading="lazy" width="32.5" alt="Frontside Software" class="image-6"></a>
+    <nav class="navigation">
+      <a href="index.html" class="footerlink">Home</a>
+      <a href="about.html" class="footerlink">About</a>
+      <a href="consulting.html" aria-current="page" class="footerlink w--current">Consulting</a>
+      <a href="tools.html" class="footerlink">Tools</a>
+      <a href="#" class="footerlink">Blog</a>
+      <a href="#" class="footerlink">Contact</a>
+    </nav>
+    <a href="https://frontside.com/" target="_blank" class="footer-symbol w-inline-block"><img src="images/fs-webclip.png" loading="lazy" width="32.5" alt="" class="image-6"></a>
     <p class="footer-notes"><br>2301 W Anderson Ln #107<br>Austin, Texas 78757<br>+1 (800) 493-4589</p>
     <p class="copyright">© 2005-2020 THE FRONTSIDE SOFTWARE, INC. ALL RIGHTS RESERVED.</p>
   </footer>
