--- a/static/tools.html
+++ b/static/tools.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
-<!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Oct 16 2020 09:01:14 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
+<!--  Last Published: Tue Nov 10 2020 18:30:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f85bf7b1a80ea76947f56fd" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
@@ -21,69 +20,115 @@
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
+  <style>
+  .asciicast iframe {
+    width: 600px !important;
+    max-width: 100% !important;
+  }
+  .asciinema-theme-asciinema .asciinema-terminal {
+  	background: red !important;
+  }
+</style>
 </head>
 <body class="fs-body">
-  <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
-    <div class="widewrapper w-container"><a href="index.html" class="w-nav-brand"><img src="images/fs-logo.svg" loading="lazy" width="143.5" alt="Frontside "></a>
-      <nav role="navigation" class="nav-menu w-nav-menu"><a href="about.html" class="navlink w-nav-link">People</a><a href="consulting.html" class="navlink w-nav-link">Consulting</a><a href="#" class="navlink w-nav-link">Subscription</a><a href="tools.html" aria-current="page" class="navlink w-nav-link w--current">Tools</a><a href="#" class="navlink w-nav-link">Contact</a></nav>
-      <div class="w-nav-button">
-        <div class="w-icon-nav-menu"></div>
-      </div>
+  <div data-collapse="medium" data-animation="over-right" data-duration="200" data-doc-height="1" data-easing="ease-in-out-circ" data-no-scroll="1" role="banner" class="navbar w-nav">
+    <div class="widewrapper w-container">
+      <a href="index.html" class="w-nav-brand"><img src="images/fs-logo.svg" loading="lazy" width="143.5" alt="Frontside "></a>
+      <nav role="navigation" class="fullnav w-nav-menu">
+        <ul role="list" class="navwrap w-list-unstyled">
+          <li class="clase-nav">
+            <div class="menu-button-2 w-nav-button"><img src="images/hamburger-menu2x.png" loading="lazy" width="33" alt="" class="image-5"></div>
+          </li>
+          <li class="navitem homelink">
+            <a href="index.html" class="main-nav-link w-nav-link">Homepage</a>
+          </li>
+          <li class="navitem">
+            <a href="about.html" class="main-nav-link w-nav-link">People</a>
+          </li>
+          <li class="navitem">
+            <a href="consulting.html" class="main-nav-link w-nav-link">Consulting</a>
+          </li>
+          <li class="navitem">
+            <a href="tools.html" aria-current="page" class="main-nav-link w-nav-link w--current">Tools</a>
+          </li>
+          <li class="navitem">
+            <a href="/blog" class="main-nav-link w-nav-link">Insights</a>
+          </li>
+          <li class="navitem contactin">
+            <a href="#" class="button cta nav in w-button">Contact</a>
+          </li>
+        </ul>
+      </nav>
+      <a href="#" class="button cta nav w-button">Contact</a>
+      <div class="menu-button-2 w-nav-button"><img src="images/hamburger-menu2x.png" loading="lazy" width="33" alt="" class="image-4"></div>
     </div>
   </div>
-  <section class="widewrapper tools w-container">
+  <section class="widewrapper herowrapper w-container">
     <div class="herotext">
       <h1 class="heading"><span class="text-span-27">Open source</span> Tools to make the complex <span class="text-span-26">simple</span></h1>
       <p class="subheader">We create and maintain Open Source libraries that fill in gaps in the app development ecosystem.</p>
-    </div><img src="images/tools-hero.png" loading="lazy" width="646" sizes="(max-width: 479px) 92vw, (max-width: 767px) 94vw, 646px" srcset="images/tools-hero-p-500.png 500w, images/tools-hero-p-800.png 800w, images/tools-hero.png 1292w" alt="" class="image-8"></section>
-  <section class="bottomwrapper w-container">
-    <div class="sidequotewrapper">
-      <blockquote class="sidequote">“Frontside constantly provides insight and ideas to eliminate blockers so we deliver quality and innovation to production rapidly and iteratively.”</blockquote>
-      <p class="sidequoteauthor">— Warren Young,<br>Senior Product Manager at Resideo.</p>
-    </div>
-    <div class="cta-block variation2 bottomside">
-      <h3 class="cta-intro">Come hang out in our OSS community</h3><a href="#" class="button w-button">Join our Discord</a></div>
+    </div><img src="images/tools-hero.png" loading="lazy" width="646" sizes="(max-width: 767px) 92vw, 646px" srcset="images/tools-hero-p-500.png 500w, images/tools-hero-p-800.png 800w, images/tools-hero.png 1292w" alt="" class="image-8">
   </section>
-  <section class="feature-wrapper w-container">
+  <section class="bottomwrapper nobottomspace w-container">
+    <div class="dialoguequote sidequote">
+      <blockquote class="sidequote white">“BigTest is the testing framework I’ve always wanted to have. It takes all we’ve learned about testing and wraps it up in a coherent and powerful package.”</blockquote>
+      <p class="sidequoteauthor white">—Jonas Nicklas, Creator of Capybara, co-creator of BigTest</p>
+    </div>
+    <div class="cta-block variation2 bottomside addtip">
+      <h3 class="cta-intro">Come hang out in our OSS community</h3>
+      <a href="#" class="button purple w-button">Join our Discord</a>
+    </div>
+  </section>
+  <section class="bottomwrapper notopspace w-container">
+    <div class="dialogcta emptytip"></div>
+  </section>
+  <section class="feature-wrapper notopspace w-container">
     <div class="feature-text">
-      <h2 class="heading-3"><strong>Invest in </strong><span class="text-span-5"><strong>long-term success</strong></span><strong> from the beginning</strong></h2>
-      <p>Once you’re growing, what was once a “quick” prototype will be hard to re-write and replace.<strong> </strong>From the beginning we position your team for systematic and predictable development and scalable products.</p>
+      <a href="https://bigtestjs.io/" target="_blank" class="headinglink w-inline-block">
+        <h2 class="heading-3"><span class="text-span-45">BigTest</span> — truly cross-browser testing made easy</h2>
+      </a>
+      <p>BigTest’s novel architecture combines the sophistication of modern tooling, our decades-long experience writing tests, plus all the lessons learned from Capybara, Rail’s famous end-to-end testing framework. </p>
+      <a href="https://bigtestjs.io/" target="_blank" class="button topage w-button">Learn more</a>
+      <a href="https://bigtestjs.io/" target="_blank" class="button topage arrow w-button">→</a>
     </div>
-    <div class="feature-image"><img src="images/consulting-long-term2x.png" loading="eager" width="505.5" sizes="(max-width: 767px) 92vw, (max-width: 991px) 505.5px, 49vw" srcset="images/consulting-long-term2x-p-500.png 500w, images/consulting-long-term2x.png 1011w" alt=""></div>
+    <div class="feature-image centered"><img src="images/testing-devices2x.png" loading="eager" width="505.5" sizes="400px" srcset="images/testing-devices2x-p-500.png 500w, images/testing-devices2x.png 1104w" alt="" class="bigtestside"></div>
   </section>
-  <section class="feature-wrapper w-container">
-    <div class="feature-image"><img src="images/consulting-teams2x.png" srcset="images/consulting-teams2x-p-500.png 500w, images/consulting-teams2x-p-800.png 800w, images/consulting-teams2x.png 1105w" width="552.5" sizes="(max-width: 767px) 92vw, (max-width: 991px) 67vw, 51vw" alt=""></div>
-    <div class="feature-text right">
-      <h2 class="heading-3"><strong>Set your </strong><span class="text-span-6"><strong>teams</strong></span><strong> up for </strong><span class="text-span-7"><strong>collaboration</strong></span></h2>
-      <p>Too often stakeholders are asked to fly blind between demos while needing to make key business decisions or planning marketing campaigns. We introduce automatic visibility tools for your teams so all software is built collaboratively and transparently.</p>
+  <div class="tools-list-wrap">
+    <div class="valuebox tool">
+      <h3 class="valuetitle"><span class="text-span-46">Affection</span>: algebraic effects API</h3>
+      <p>Over the years we’ve iterated on the ergonomics that make algebraic effects easy to use within popular javascript frameworks. This library makes it possible for us to have sophisticated concurrent threads running on BigTest. </p>
+      <a href="https://github.com/thefrontside/effection" target="_blank" class="button topage small w-button">View on Github</a>
     </div>
-  </section>
-  <div class="bigquote-section">
-    <div class="bigquote-wrapper w-container">
-      <blockquote class="bigquote">“They introduced us to a new way of thinking and working that we adopted across the board. The quality of their work was far higher than what we’ve seen before.”</blockquote>
-      <p class="bigquote-author">— Benjamin Shine,<br>Staff Engineer, AltSchool</p>
-      <div class="cta-block variation1">
-        <h3 class="cta-intro">Get ready for scale </h3><a href="#" class="button cta w-button">Talk with us</a></div>
+    <div class="valuebox tool decor2">
+      <h3 class="valuetitle"><span class="text-span-47">Microstates</span>: composable primitives for Javascript</h3>
+      <p>Microstates introduces javascript structure primitives that resemble traditional, intuitive, mutable objects. But behind the scenes everything is a pure function handling immutable data, giving you the benefits of functional programming without the mental overhead. </p>
+      <a href="https://github.com/thefrontside/microstates" target="_blank" class="button topage small w-button">View on Github</a>
     </div>
   </div>
-  <section class="feature-wrapper w-container">
-    <div class="feature-text">
-      <h2 class="heading-3"><strong>Keep your </strong><span class="text-span-8"><strong>teams unblocked</strong></span><strong> from each other</strong></h2>
-      <p>As they wait for business streams to finalize implementations, frontend teams often have to pause on developing APIs or mobile teams halt development of peripheral devices. We deploy contract management strategies to align teams on data requirements and provide them with simulators so they can efficiently work in parallel.</p>
+  <div class="tools-list-wrap">
+    <div class="valuebox tool decor3">
+      <h3 class="valuetitle"><span class="text-span-48">@frontside/javascript</span>: code linters and standards</h3>
+      <p>Code quality necessarily comes from writing consistent code. We ensure logical and uniform coding by using common eslint rules and tsconfig setups that are available as open source packages. </p>
+      <a href="https://github.com/thefrontside/javascript" target="_blank" class="button topage small w-button">View on Github</a>
     </div>
-    <div class="feature-image"><img src="images/consulting-collaborate2x.png" loading="lazy" width="423" sizes="(max-width: 479px) 88vw, 423px" srcset="images/consulting-collaborate2x-p-500.png 500w, images/consulting-collaborate2x.png 846w" alt=""></div>
-  </section>
-  <section class="feature-wrapper w-container">
-    <div class="feature-image"><img src="images/consulting-network2x.png" loading="lazy" width="311.5" alt=""></div>
-    <div class="feature-text right">
-      <h2 class="heading-3"><strong>Always work with</strong> the<span class="text-span-10"> </span><span class="text-span-9"><strong>best for the task</strong></span></h2>
-      <p>Many consultants present themselves as jack-of-all-trades but underdeliver on the expertise that you need. Instead, long-standing relationships with top performing experts from the Open Source community allows us to bring you elite level talent, who are often the creators of the tools you use. </p>
+    <div class="valuebox tool decor1">
+      <h3 class="valuetitle"><span class="text-span-49">Frontmacs</span>: a curated emacs distribution </h3>
+      <p>Optimized for web workflows, our emacs distribution delights the users of this popular text editor every time. We’ve built it so it can be extensible and customizable, and we also included our favorite plugins and settings for working with javascript. </p>
+      <a href="https://github.com/thefrontside/frontmacs" target="_blank" class="button topage small w-button">View on Github</a>
     </div>
-  </section>
+  </div>
   <footer class="footerwrapper w-container">
-    <nav class="navigation"><a href="index.html" class="footerlink">Home</a><a href="#" class="footerlink">About</a><a href="consulting.html" class="footerlink">Consulting</a><a href="#" class="footerlink">Subscription</a><a href="#" class="footerlink">Blog</a><a href="#" class="footerlink">Contact</a></nav><a href="https://frontside.com/" target="_blank" class="footer-symbol w-inline-block"><img src="images/frontside-symbol2x_1frontside-symbol2x.png" loading="lazy" width="32.5" alt="Frontside Software" class="image-6"></a>
+    <nav class="navigation">
+      <a href="index.html" class="footerlink">Home</a>
+      <a href="about.html" class="footerlink">About</a>
+      <a href="consulting.html" class="footerlink">Consulting</a>
+      <a href="tools.html" aria-current="page" class="footerlink w--current">Tools</a>
+      <a href="#" class="footerlink">Blog</a>
+      <a href="#" class="footerlink">Contact</a>
+    </nav>
+    <a href="https://frontside.com/" target="_blank" class="footer-symbol w-inline-block"><img src="images/fs-webclip.png" loading="lazy" width="32.5" alt="" class="image-6"></a>
     <p class="footer-notes"><br>2301 W Anderson Ln #107<br>Austin, Texas 78757<br>+1 (800) 493-4589</p>
     <p class="copyright">© 2005-2020 THE FRONTSIDE SOFTWARE, INC. ALL RIGHTS RESERVED.</p>
   </footer>
