Updates webflow nav links to use paths instead of files

--- a/static/about.html
+++ b/static/about.html
@@ -35,23 +35,23 @@
 <body class="fs-body">
   <div data-collapse="medium" data-animation="over-right" data-duration="200" data-doc-height="1" data-easing="ease-in-out-circ" data-no-scroll="1" role="banner" class="navbar w-nav">
     <div class="widewrapper w-container">
-      <a href="index.html" class="w-nav-brand"><img src="images/fs-logo.svg" loading="lazy" width="143.5" alt="Frontside "></a>
+      <a href="/" class="w-nav-brand"><img src="images/fs-logo.svg" loading="lazy" width="143.5" alt="Frontside "></a>
       <nav role="navigation" class="fullnav w-nav-menu">
         <ul role="list" class="navwrap w-list-unstyled">
           <li class="clase-nav">
             <div class="menu-button-2 w-nav-button"><img src="images/hamburger-menu2x.png" loading="lazy" width="33" alt="" class="image-5"></div>
           </li>
           <li class="navitem homelink">
-            <a href="index.html" class="main-nav-link w-nav-link">Homepage</a>
+            <a href="/" class="main-nav-link w-nav-link">Homepage</a>
           </li>
           <li class="navitem">
-            <a href="about.html" aria-current="page" class="main-nav-link w-nav-link w--current">People</a>
+            <a href="/about" aria-current="page" class="main-nav-link w-nav-link w--current">People</a>
           </li>
           <li class="navitem">
-            <a href="consulting.html" class="main-nav-link w-nav-link">Consulting</a>
+            <a href="/consulting" class="main-nav-link w-nav-link">Consulting</a>
           </li>
           <li class="navitem">
-            <a href="tools.html" class="main-nav-link w-nav-link">Tools</a>
+            <a href="/tools" class="main-nav-link w-nav-link">Tools</a>
           </li>
           <li class="navitem">
             <a href="/blog" class="main-nav-link w-nav-link">Insights</a>
@@ -181,11 +181,11 @@
   </div>
   <footer class="footerwrapper w-container">
     <nav class="navigation">
-      <a href="index.html" class="footerlink">Home</a>
-      <a href="about.html" aria-current="page" class="footerlink w--current">About</a>
-      <a href="consulting.html" class="footerlink">Consulting</a>
-      <a href="tools.html" class="footerlink">Tools</a>
-      <a href="#" class="footerlink">Blog</a>
+      <a href="/" class="footerlink">Home</a>
+      <a href="/about" aria-current="page" class="footerlink w--current">About</a>
+      <a href="/consulting" class="footerlink">Consulting</a>
+      <a href="/tools" class="footerlink">Tools</a>
+      <a href="/blog" class="footerlink">Blog</a>
       <a href="#" class="footerlink">Contact</a>
     </nav>
     <a href="https://frontside.com/" target="_blank" class="footer-symbol w-inline-block"><img src="images/fs-webclip.png" loading="lazy" width="32.5" alt="" class="image-6"></a>
