--- a/static/index.html
+++ b/static/index.html
@@ -35,23 +35,23 @@
 <body class="fs-body">
   <div data-collapse="medium" data-animation="over-right" data-duration="200" data-doc-height="1" data-easing="ease-in-out-circ" data-no-scroll="1" role="banner" class="navbar w-nav">
     <div class="widewrapper w-container">
-      <a href="index.html" aria-current="page" class="w-nav-brand w--current"><img src="images/fs-logo.svg" loading="lazy" width="143.5" alt="Frontside "></a>
+      <a href="/" aria-current="page" class="w-nav-brand w--current"><img src="images/fs-logo.svg" loading="lazy" width="143.5" alt="Frontside "></a>
       <nav role="navigation" class="fullnav w-nav-menu">
         <ul role="list" class="navwrap w-list-unstyled">
           <li class="clase-nav">
             <div class="menu-button-2 w-nav-button"><img src="images/hamburger-menu2x.png" loading="lazy" width="33" alt="" class="image-5"></div>
           </li>
           <li class="navitem homelink">
-            <a href="index.html" aria-current="page" class="main-nav-link w-nav-link w--current">Homepage</a>
+            <a href="/" aria-current="page" class="main-nav-link w-nav-link w--current">Homepage</a>
           </li>
           <li class="navitem">
-            <a href="about.html" class="main-nav-link w-nav-link">People</a>
+            <a href="/about" class="main-nav-link w-nav-link">People</a>
           </li>
           <li class="navitem">
-            <a href="consulting.html" class="main-nav-link w-nav-link">Consulting</a>
+            <a href="/consulting" class="main-nav-link w-nav-link">Consulting</a>
           </li>
           <li class="navitem">
-            <a href="tools.html" class="main-nav-link w-nav-link">Tools</a>
+            <a href="/tools" class="main-nav-link w-nav-link">Tools</a>
           </li>
           <li class="navitem">
             <a href="#" class="main-nav-link w-nav-link">Insights</a>
@@ -82,13 +82,13 @@
   </div>
   <section class="feature-wrapper w-container">
     <div class="feature-text home">
-      <a href="consulting.html" class="headinglink w-inline-block">
+      <a href="/consulting" class="headinglink w-inline-block">
         <h2 class="home-h2">Consulting for <span class="text-span-24">teams in expansion</span></h2>
       </a>
       <p class="home-subheader">Secure the success of your upcoming business initiatives with a sound infrastructure</p>
       <p>We deep-dive to implement an architecture and development workflow so your teams can collaborate and deliver value consistently as your firm expands. </p>
-      <a href="consulting.html" class="button topage w-button">Learn more</a>
-      <a href="consulting.html" class="button topage arrow w-button">→</a>
+      <a href="/consulting" class="button topage w-button">Learn more</a>
+      <a href="/consulting" class="button topage arrow w-button">→</a>
     </div>
     <div class="feature-image narrowimage"><img src="images/consulting-hero2x.png" loading="eager" width="418.5" sizes="(max-width: 479px) 100vw, (max-width: 767px) 67vw, 324px" srcset="images/consulting-hero2x-p-500.png 500w, images/consulting-hero2x.png 837w" alt="" class="image-11"></div>
   </section>
@@ -106,20 +106,20 @@
       </a>
       <p class="home-subheader">Power up your senior engineers with proven advice on long-lasting software practices</p>
       <p>Through remote working sessions, pairing-programming, and asynchronous support we solve your toughest problems and anticipate your future needs.</p>
-      <a href="consulting.html" class="button topage w-button">Learn more</a>
-      <a href="consulting.html" class="button topage arrow w-button">→</a>
+      <a href="/consulting" class="button topage w-button">Learn more</a>
+      <a href="/consulting" class="button topage arrow w-button">→</a>
     </div>
     <div class="feature-image"><img src="images/subscription-hero2x.png" loading="eager" width="505.5" sizes="(max-width: 767px) 92vw, (max-width: 991px) 505.5px, 49vw" srcset="images/subscription-hero2x-p-500.png 500w, images/subscription-hero2x-p-800.png 800w, images/subscription-hero2x.png 1351w" alt=""></div>
   </section>
   <section class="feature-wrapper w-container">
     <div class="feature-text home">
-      <a href="tools.html" class="headinglink w-inline-block">
+      <a href="/tools" class="headinglink w-inline-block">
         <h2 class="home-h2">Tools that help developers to <span class="text-span-38">achieve more with less work</span></h2>
       </a>
       <p class="home-subheader">Enhance your development workflow adopting our Open Source libraries</p>
       <p>We’re creating an end-to-end testing framework that benefits from a novel test-as-data architecture to covering your app with less effort. Similarly, we maintain an algebraic effects library that provides developers with the benefits of functional programming without the mental overhead. </p>
-      <a href="tools.html" class="button topage w-button">Learn more</a>
-      <a href="tools.html" class="button topage arrow w-button">→</a>
+      <a href="/tools" class="button topage w-button">Learn more</a>
+      <a href="/tools" class="button topage arrow w-button">→</a>
     </div>
     <div class="feature-image"><img src="images/tools-hero.png" loading="eager" width="505.5" sizes="(max-width: 767px) 92vw, (max-width: 991px) 505.5px, 49vw" srcset="images/tools-hero-p-500.png 500w, images/tools-hero-p-800.png 800w, images/tools-hero.png 1292w" alt=""></div>
   </section>
@@ -152,10 +152,10 @@
   </div>
   <footer class="footerwrapper w-container">
     <nav class="navigation">
-      <a href="index.html" aria-current="page" class="footerlink w--current">Home</a>
-      <a href="about.html" class="footerlink">About</a>
-      <a href="consulting.html" class="footerlink">Consulting</a>
-      <a href="tools.html" class="footerlink">Tools</a>
+      <a href="/" aria-current="page" class="footerlink w--current">Home</a>
+      <a href="/about" class="footerlink">About</a>
+      <a href="/consulting" class="footerlink">Consulting</a>
+      <a href="/tools" class="footerlink">Tools</a>
       <a href="#" class="footerlink">Blog</a>
       <a href="#" class="footerlink">Contact</a>
     </nav>
