--- a/static/consulting.html
+++ b/static/consulting.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Nov 10 2020 18:30:55 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Nov 10 2020 19:14:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f85a0bba25bf148ce79acb4" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
@@ -132,7 +132,7 @@
       <a href="/about" class="footerlink">About</a>
       <a href="/consulting" aria-current="page" class="footerlink w--current">Consulting</a>
       <a href="/tools" class="footerlink">Tools</a>
-      <a href="#" class="footerlink">Blog</a>
+      <a href="/blog" class="footerlink">Blog</a>
       <a href="#" class="footerlink">Contact</a>
     </nav>
     <a href="https://frontside.com/" target="_blank" class="footer-symbol w-inline-block"><img src="images/fs-webclip.png" loading="lazy" width="32.5" alt="" class="image-6"></a>
