--- a/static/tools.html
+++ b/static/tools.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Nov 10 2020 18:30:55 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Nov 10 2020 19:14:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f85bf7b1a80ea76947f56fd" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
@@ -22,15 +22,6 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <style>
-  .asciicast iframe {
-    width: 600px !important;
-    max-width: 100% !important;
-  }
-  .asciinema-theme-asciinema .asciinema-terminal {
-  	background: red !important;
-  }
-</style>
 </head>
 <body class="fs-body">
   <div data-collapse="medium" data-animation="over-right" data-duration="200" data-doc-height="1" data-easing="ease-in-out-circ" data-no-scroll="1" role="banner" class="navbar w-nav">
@@ -125,7 +116,7 @@
       <a href="/about" class="footerlink">About</a>
       <a href="/consulting" class="footerlink">Consulting</a>
       <a href="/tools" aria-current="page" class="footerlink w--current">Tools</a>
-      <a href="#" class="footerlink">Blog</a>
+      <a href="/blog" class="footerlink">Blog</a>
       <a href="#" class="footerlink">Contact</a>
     </nav>
     <a href="https://frontside.com/" target="_blank" class="footer-symbol w-inline-block"><img src="images/fs-webclip.png" loading="lazy" width="32.5" alt="" class="image-6"></a>
