Adds assets improvements for webflow pages

--- a/static/consulting.html
+++ b/static/consulting.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Nov 10 2020 19:14:16 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Nov 11 2020 12:10:05 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f85a0bba25bf148ce79acb4" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
@@ -61,7 +61,7 @@
       <h1 class="heading">Build the <span class="text-span-4">engineering</span> backbone of an <span class="text-span-2">industry leader</span></h1>
       <p class="subheader">We provide web/mobile architecture and workflows that accelerate your business growth.</p>
     </div>
-    <div class="consultingheroimage"><img src="images/consulting-hero2x.png" loading="lazy" sizes="(max-width: 479px) 86vw, (max-width: 767px) 350px, 420px" srcset="images/consulting-hero2x-p-500.png 500w, images/consulting-hero2x.png 837w" alt=""></div>
+    <div class="consultingheroimage"><img src="images/consulting-hero1.5x.png" loading="lazy" alt=""></div>
   </section>
   <section class="horizontal-logos w-container"><img src="images/client-dell2x.png" loading="lazy" width="74.5" alt="" class="client-logo"><img src="images/client-honeywell2x.png" loading="lazy" width="138" alt="" class="client-logo"><img src="images/client-resideo2x.png" loading="lazy" width="91.5" alt="" class="client-logo"><img src="images/client-standard-chartered2x.png" loading="lazy" width="74" alt="" class="client-logo"><img src="images/client-ebsco2x.png" loading="lazy" width="87" alt="" class="client-logo"><img src="images/client-sxsw2x.png" loading="lazy" width="89" alt="" class="client-logo"><img src="images/client-conde-nast2x.png" loading="lazy" width="209" alt="" class="client-logo"></section>
   <div class="lone-ctw-wrapper w-container">
@@ -71,7 +71,7 @@
     </div>
   </div>
   <section class="feature-wrapper w-container">
-    <div class="feature-image"><img src="images/consulting-long-term2x.png" loading="eager" width="505.5" sizes="(max-width: 767px) 92vw, (max-width: 991px) 505.5px, 47vw" srcset="images/consulting-long-term2x-p-500.png 500w, images/consulting-long-term2x.png 1011w" alt=""></div>
+    <div class="feature-image"><img src="images/consulting-long-term1.5x.png" loading="eager" width="505.5" sizes="(max-width: 767px) 92vw, (max-width: 991px) 505.5px, 47vw" srcset="images/consulting-long-term1.5x-p-500.png 500w, images/consulting-long-term1.5x.png 847w" alt=""></div>
     <div class="feature-text right">
       <h2 class="heading-3"><strong>Invest in </strong><span class="text-span-5"><strong>long-term success</strong></span><strong><br>from the beginning</strong></h2>
       <p>Once you’re growing, what was once a “quick” prototype will be hard to re-write and replace.<strong> </strong>From the beginning we position your team for systematic and predictable development and scalable products.</p>
@@ -123,7 +123,7 @@
       <a href="/about" class="footerlink">About</a>
       <a href="/consulting" aria-current="page" class="footerlink w--current">Consulting</a>
       <a href="/tools" class="footerlink">Tools</a>
-      <a href="/blog" class="footerlink">Blog</a>
+      <a href="/blog" class="footerlink">Insights</a>
       <a href="#" class="footerlink">Contact</a>
     </nav>
     <a href="https://frontside.com/" target="_blank" class="footer-symbol w-inline-block"><img src="images/fs-webclip.png" loading="lazy" width="32.5" alt="" class="image-6"></a>
