--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Nov 10 2020 19:14:16 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Nov 11 2020 12:10:05 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f7f19d60c33effa4a9a8bf9" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
@@ -81,7 +81,7 @@
       <a href="/consulting" class="button topage w-button">Learn more</a>
       <a href="/consulting" class="button topage arrow w-button">→</a>
     </div>
-    <div class="feature-image narrowimage"><img src="images/consulting-hero2x.png" loading="eager" width="418.5" sizes="(max-width: 479px) 100vw, (max-width: 767px) 67vw, 324px" srcset="images/consulting-hero2x-p-500.png 500w, images/consulting-hero2x.png 837w" alt="" class="image-11"></div>
+    <div class="feature-image narrowimage"><img src="images/consulting-hero1.5x.png" loading="eager" width="418.5" alt="" class="image-11"></div>
   </section>
   <div class="bigquote-section darker">
     <div class="bigquote-wrapper w-container">
@@ -90,18 +90,6 @@
       <a href="#" class="button white w-button"><span class="gradienttext">Talk with us</span></a>
     </div>
   </div>
-  <section class="feature-wrapper w-container">
-    <div class="feature-text">
-      <a href="#" class="headinglink w-inline-block">
-        <h2 class="home-h2">Get <span class="text-span-25">access to our experts</span> for a flat monthly fee</h2>
-      </a>
-      <p class="home-subheader">Power up your senior engineers with proven advice on long-lasting software practices</p>
-      <p>Through remote working sessions, pairing-programming, and asynchronous support we solve your toughest problems and anticipate your future needs.</p>
-      <a href="/consulting" class="button topage w-button">Learn more</a>
-      <a href="/consulting" class="button topage arrow w-button">→</a>
-    </div>
-    <div class="feature-image"><img src="images/subscription-hero2x.png" loading="eager" width="505.5" sizes="(max-width: 767px) 92vw, (max-width: 991px) 505.5px, 49vw" srcset="images/subscription-hero2x-p-500.png 500w, images/subscription-hero2x-p-800.png 800w, images/subscription-hero2x.png 1351w" alt=""></div>
-  </section>
   <section class="feature-wrapper w-container">
     <div class="feature-text home">
       <a href="/tools" class="headinglink w-inline-block">
@@ -112,7 +100,7 @@
       <a href="/tools" class="button topage w-button">Learn more</a>
       <a href="/tools" class="button topage arrow w-button">→</a>
     </div>
-    <div class="feature-image"><img src="images/tools-hero.png" loading="eager" width="505.5" sizes="(max-width: 767px) 92vw, (max-width: 991px) 505.5px, 49vw" srcset="images/tools-hero-p-500.png 500w, images/tools-hero-p-800.png 800w, images/tools-hero.png 1292w" alt=""></div>
+    <div class="feature-image"><img src="images/tools-hero1.5x.png" loading="eager" width="600" sizes="(max-width: 479px) 92vw, (max-width: 767px) 94vw, (max-width: 991px) 68vw, 52vw" srcset="images/tools-hero1.5x-p-500.png 500w, images/tools-hero1.5x.png 835w" alt=""></div>
   </section>
   <div class="widewrapper column w-container">
     <h2 class="home-h2 blog">Our latest insights</h2>
@@ -147,7 +135,7 @@
       <a href="/about" class="footerlink">About</a>
       <a href="/consulting" class="footerlink">Consulting</a>
       <a href="/tools" class="footerlink">Tools</a>
-      <a href="/blog" class="footerlink">Blog</a>
+      <a href="/blog" class="footerlink">Insights</a>
       <a href="#" class="footerlink">Contact</a>
     </nav>
     <a href="https://frontside.com/" target="_blank" class="footer-symbol w-inline-block"><img src="images/fs-webclip.png" loading="lazy" width="32.5" alt="" class="image-6"></a>
