--- a/static/tools.html
+++ b/static/tools.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Nov 10 2020 19:14:16 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Nov 11 2020 12:10:05 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f85bf7b1a80ea76947f56fd" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
@@ -60,7 +60,8 @@
     <div class="herotext">
       <h1 class="heading"><span class="text-span-27">Open source</span> Tools to make the complex <span class="text-span-26">simple</span></h1>
       <p class="subheader">We create and maintain Open Source libraries that fill in gaps in the app development ecosystem.</p>
-    </div><img src="images/tools-hero.png" loading="lazy" width="646" sizes="(max-width: 767px) 92vw, 646px" srcset="images/tools-hero-p-500.png 500w, images/tools-hero-p-800.png 800w, images/tools-hero.png 1292w" alt="" class="image-8">
+    </div>
+    <div class="toolsheroimage"><img src="images/tools-hero1.5x.png" loading="lazy" srcset="images/tools-hero1.5x-p-500.png 500w, images/tools-hero1.5x.png 835w" sizes="(max-width: 479px) 100vw, (max-width: 991px) 600px, 44vw" alt=""></div>
   </section>
   <section class="bottomwrapper nobottomspace w-container">
     <div class="dialoguequote sidequote">
@@ -116,7 +117,7 @@
       <a href="/about" class="footerlink">About</a>
       <a href="/consulting" class="footerlink">Consulting</a>
       <a href="/tools" aria-current="page" class="footerlink w--current">Tools</a>
-      <a href="/blog" class="footerlink">Blog</a>
+      <a href="/blog" class="footerlink">Insights</a>
       <a href="#" class="footerlink">Contact</a>
     </nav>
     <a href="https://frontside.com/" target="_blank" class="footer-symbol w-inline-block"><img src="images/fs-webclip.png" loading="lazy" width="32.5" alt="" class="image-6"></a>
