Updates webflow pages

--- a/static/consulting.html
+++ b/static/consulting.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Nov 11 2020 16:59:48 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Nov 13 2020 10:54:44 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f85a0bba25bf148ce79acb4" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
@@ -7,8 +7,10 @@
   <meta content="Build the engineering backbone of an industry leader with Frontside as your engineering partner. We provide web/mobile architecture and workflows that accelerate your business growth" name="description">
   <meta content="Consulting" property="og:title">
   <meta content="Build the engineering backbone of an industry leader with Frontside as your engineering partner. We provide web/mobile architecture and workflows that accelerate your business growth" property="og:description">
+  <meta content="https://uploads-ssl.webflow.com/5f7f19d60c33ef0c409a8bf8/5fae657d672304670060a4d8_consulting.png" property="og:image">
   <meta content="Consulting" property="twitter:title">
   <meta content="Build the engineering backbone of an industry leader with Frontside as your engineering partner. We provide web/mobile architecture and workflows that accelerate your business growth" property="twitter:description">
+  <meta content="https://uploads-ssl.webflow.com/5f7f19d60c33ef0c409a8bf8/5fae657d672304670060a4d8_consulting.png" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -42,7 +44,12 @@
       <nav role="navigation" class="fullnav w-nav-menu">
         <ul role="list" class="navwrap w-list-unstyled">
           <li class="clase-nav">
-            <div class="menu-button-2 w-nav-button"><img src="images/hamburger-menu2x.png" loading="lazy" width="33" alt="" class="image-5"></div>
+            <div class="menu-button-2 w-nav-button">
+              <div class="image-5 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="33" height="17.5" viewbox="0 0 32.63 17" classname="image-4">
+                  <path fill="#14315d" d="M7.4,0,0,4.27v8.46L7.4,17l7.34-4.27V4.27ZM7.34,2.82l5,2.89v5.64L7.4,14.18,2.45,11.35V5.71L4.2,4.64"></path>
+                  <path fill="#14315d" d="M25.29,0,17.88,4.27v8.46L25.29,17l7.34-4.27V4.27Zm-.07,2.82,5,2.89v5.64l-4.89,2.83-5-2.83V5.71l1.76-1.07"></path>
+                </svg></div>
+            </div>
           </li>
           <li class="navitem homelink">
             <a href="/" class="main-nav-link w-nav-link">Homepage</a>
@@ -65,7 +72,12 @@
         </ul>
       </nav>
       <a href="#" class="button cta nav w-button">Contact</a>
-      <div class="menu-button-2 w-nav-button"><img src="images/hamburger-menu2x.png" loading="lazy" width="33" alt="" class="image-4"></div>
+      <div class="menu-button-2 w-nav-button">
+        <div class="image-4 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="33" height="17.5" viewbox="0 0 32.63 17" classname="image-4">
+            <path fill="#14315d" d="M7.4,0,0,4.27v8.46L7.4,17l7.34-4.27V4.27ZM7.34,2.82l5,2.89v5.64L7.4,14.18,2.45,11.35V5.71L4.2,4.64"></path>
+            <path fill="#14315d" d="M25.29,0,17.88,4.27v8.46L25.29,17l7.34-4.27V4.27Zm-.07,2.82,5,2.89v5.64l-4.89,2.83-5-2.83V5.71l1.76-1.07"></path>
+          </svg></div>
+      </div>
     </div>
   </div>
   <section class="widewrapper herowrapper w-container">
@@ -138,7 +150,7 @@
       <a href="/blog" class="footerlink">Insights</a>
       <a href="#" class="footerlink">Contact</a>
     </nav>
-    <a href="https://frontside.com/" target="_blank" class="footer-symbol w-inline-block"><img src="images/fs-webclip.png" loading="lazy" width="32.5" alt="" class="image-6"></a>
+    <a href="https://frontside.com/" target="_blank" rel="nofollow" class="footer-symbol w-inline-block"><img src="images/fs-webclip.png" loading="lazy" width="32.5" alt="" class="image-6"></a>
     <p class="footer-notes"><br>2301 W Anderson Ln #107<br>Austin, Texas 78757<br>+1 (800) 493-4589</p>
     <p class="copyright">© 2005-2020 THE FRONTSIDE SOFTWARE, INC. ALL RIGHTS RESERVED.</p>
   </footer>
