--- a/static/tools.html
+++ b/static/tools.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Nov 11 2020 16:59:48 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Nov 13 2020 10:54:44 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f85bf7b1a80ea76947f56fd" data-wf-site="5f7f19d60c33ef0c409a8bf8">
 <head>
   <meta charset="utf-8">
@@ -7,8 +7,10 @@
   <meta content="Frontside creates and maintains Open Source libraries that fill in gaps in the app development ecosystem." name="description">
   <meta content="Tools and libraries" property="og:title">
   <meta content="Frontside creates and maintains Open Source libraries that fill in gaps in the app development ecosystem." property="og:description">
+  <meta content="https://uploads-ssl.webflow.com/5f7f19d60c33ef0c409a8bf8/5fae657d672304285060a4d9_tools.png" property="og:image">
   <meta content="Tools and libraries" property="twitter:title">
   <meta content="Frontside creates and maintains Open Source libraries that fill in gaps in the app development ecosystem." property="twitter:description">
+  <meta content="https://uploads-ssl.webflow.com/5f7f19d60c33ef0c409a8bf8/5fae657d672304285060a4d9_tools.png" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -42,7 +44,12 @@
       <nav role="navigation" class="fullnav w-nav-menu">
         <ul role="list" class="navwrap w-list-unstyled">
           <li class="clase-nav">
-            <div class="menu-button-2 w-nav-button"><img src="images/hamburger-menu2x.png" loading="lazy" width="33" alt="" class="image-5"></div>
+            <div class="menu-button-2 w-nav-button">
+              <div class="image-5 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="33" height="17.5" viewbox="0 0 32.63 17" classname="image-4">
+                  <path fill="#14315d" d="M7.4,0,0,4.27v8.46L7.4,17l7.34-4.27V4.27ZM7.34,2.82l5,2.89v5.64L7.4,14.18,2.45,11.35V5.71L4.2,4.64"></path>
+                  <path fill="#14315d" d="M25.29,0,17.88,4.27v8.46L25.29,17l7.34-4.27V4.27Zm-.07,2.82,5,2.89v5.64l-4.89,2.83-5-2.83V5.71l1.76-1.07"></path>
+                </svg></div>
+            </div>
           </li>
           <li class="navitem homelink">
             <a href="/" class="main-nav-link w-nav-link">Homepage</a>
@@ -65,7 +72,12 @@
         </ul>
       </nav>
       <a href="#" class="button cta nav w-button">Contact</a>
-      <div class="menu-button-2 w-nav-button"><img src="images/hamburger-menu2x.png" loading="lazy" width="33" alt="" class="image-4"></div>
+      <div class="menu-button-2 w-nav-button">
+        <div class="image-4 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="33" height="17.5" viewbox="0 0 32.63 17" classname="image-4">
+            <path fill="#14315d" d="M7.4,0,0,4.27v8.46L7.4,17l7.34-4.27V4.27ZM7.34,2.82l5,2.89v5.64L7.4,14.18,2.45,11.35V5.71L4.2,4.64"></path>
+            <path fill="#14315d" d="M25.29,0,17.88,4.27v8.46L25.29,17l7.34-4.27V4.27Zm-.07,2.82,5,2.89v5.64l-4.89,2.83-5-2.83V5.71l1.76-1.07"></path>
+          </svg></div>
+      </div>
     </div>
   </div>
   <section class="widewrapper herowrapper w-container">
@@ -90,12 +102,12 @@
   </section>
   <section class="feature-wrapper notopspace w-container">
     <div class="feature-text">
-      <a href="https://bigtestjs.io/" target="_blank" class="headinglink w-inline-block">
+      <a href="https://bigtestjs.io/" target="_blank" rel="nofollow" class="headinglink w-inline-block">
         <h2 class="heading-3"><span class="text-span-45">BigTest</span> — truly cross-browser testing made easy</h2>
       </a>
       <p>BigTest’s novel architecture combines the sophistication of modern tooling, our decades-long experience writing tests, plus all the lessons learned from Capybara, Rail’s famous end-to-end testing framework. </p>
-      <a href="https://bigtestjs.io/" target="_blank" class="button topage w-button">Learn more</a>
-      <a href="https://bigtestjs.io/" target="_blank" class="button topage arrow w-button">→</a>
+      <a href="https://bigtestjs.io/" target="_blank" rel="nofollow" class="button topage w-button">Learn more</a>
+      <a href="https://bigtestjs.io/" target="_blank" rel="nofollow" class="button topage arrow w-button">→</a>
     </div>
     <div class="feature-image centered"><img src="images/testing-devices2x.png" loading="eager" width="505.5" sizes="400px" srcset="images/testing-devices2x-p-500.png 500w, images/testing-devices2x.png 1104w" alt="" class="bigtestside"></div>
   </section>
@@ -103,24 +115,24 @@
     <div class="valuebox tool">
       <h3 class="valuetitle"><span class="text-span-46">Affection</span>: algebraic effects API</h3>
       <p>Over the years we’ve iterated on the ergonomics that make algebraic effects easy to use within popular javascript frameworks. This library makes it possible for us to have sophisticated concurrent threads running on BigTest. </p>
-      <a href="https://github.com/thefrontside/effection" target="_blank" class="button topage small w-button">View on Github</a>
+      <a href="https://github.com/thefrontside/effection" target="_blank" rel="nofollow" class="button topage small w-button">View on Github</a>
     </div>
     <div class="valuebox tool decor2">
       <h3 class="valuetitle"><span class="text-span-47">Microstates</span>: composable primitives for Javascript</h3>
       <p>Microstates introduces javascript structure primitives that resemble traditional, intuitive, mutable objects. But behind the scenes everything is a pure function handling immutable data, giving you the benefits of functional programming without the mental overhead. </p>
-      <a href="https://github.com/thefrontside/microstates" target="_blank" class="button topage small w-button">View on Github</a>
+      <a href="https://github.com/thefrontside/microstates" target="_blank" rel="nofollow" class="button topage small w-button">View on Github</a>
     </div>
   </div>
   <div class="tools-list-wrap">
     <div class="valuebox tool decor3">
       <h3 class="valuetitle"><span class="text-span-48">@frontside/javascript</span>: code linters and standards</h3>
       <p>Code quality necessarily comes from writing consistent code. We ensure logical and uniform coding by using common eslint rules and tsconfig setups that are available as open source packages. </p>
-      <a href="https://github.com/thefrontside/javascript" target="_blank" class="button topage small w-button">View on Github</a>
+      <a href="https://github.com/thefrontside/javascript" target="_blank" rel="nofollow" class="button topage small w-button">View on Github</a>
     </div>
     <div class="valuebox tool decor1">
       <h3 class="valuetitle"><span class="text-span-49">Frontmacs</span>: a curated emacs distribution </h3>
       <p>Optimized for web workflows, our emacs distribution delights the users of this popular text editor every time. We’ve built it so it can be extensible and customizable, and we also included our favorite plugins and settings for working with javascript. </p>
-      <a href="https://github.com/thefrontside/frontmacs" target="_blank" class="button topage small w-button">View on Github</a>
+      <a href="https://github.com/thefrontside/frontmacs" target="_blank" rel="nofollow" class="button topage small w-button">View on Github</a>
     </div>
   </div>
   <footer class="footerwrapper w-container">
@@ -132,7 +144,7 @@
       <a href="/blog" class="footerlink">Insights</a>
       <a href="#" class="footerlink">Contact</a>
     </nav>
-    <a href="https://frontside.com/" target="_blank" class="footer-symbol w-inline-block"><img src="images/fs-webclip.png" loading="lazy" width="32.5" alt="" class="image-6"></a>
+    <a href="https://frontside.com/" target="_blank" rel="nofollow" class="footer-symbol w-inline-block"><img src="images/fs-webclip.png" loading="lazy" width="32.5" alt="" class="image-6"></a>
     <p class="footer-notes"><br>2301 W Anderson Ln #107<br>Austin, Texas 78757<br>+1 (800) 493-4589</p>
     <p class="copyright">© 2005-2020 THE FRONTSIDE SOFTWARE, INC. ALL RIGHTS RESERVED.</p>
   </footer>
